--- a/android-developer.html
+++ b/android-developer.html
@@ -69,7 +69,7 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oD5J7fwi'>The Havas Group Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oVqu7fwG'>The Havas Group Careers - Android Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oVqu7fwG'>The Havas Group Careers - Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -97,11 +97,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://transfergo.workable.com/j/6B82E80C3F'>TransferGo - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -389,11 +389,11 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205470-senior-android-developer'>Central 1 Credit Union Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
