--- a/software.html
+++ b/software.html
@@ -39,6 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oHzoafwy&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nvdLTKwB'>Gigamon Careers - Senior Staff Software Engineer - Sensors</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oiNK9fwI&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=ndcLTKwi'>Apttus Careers - Senior Software Engineer, AI</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
 <h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -75,7 +87,7 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279745-lead-software-engineer-big-data-platform'>Visa Lead Software Engineer, Big Data Platform | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692279745-lead-software-engineer-big-data-platform'>Visa Lead Software Engineer, Big Data Platform | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -167,7 +179,7 @@
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999692250049-software-engineer'>SG Digital Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999692250049-software-engineer'>SG Digital Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,11 +273,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oHG37fwh'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Backend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oHG37fwh'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Backend</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/ocxbafwO'>Numbrs Personal Finance AG Careers - Senior Software Engineer, iOS - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/ocxbafwO'>Numbrs Personal Finance AG Careers - Senior Software Engineer, iOS - Remote</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -321,7 +333,7 @@
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/magnitude/job/oywBafwz'>Magnitude Software Careers - C++ Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/magnitude/job/oywBafwz'>Magnitude Software Careers - C++ Software Developer</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -381,7 +393,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxedwholesale/jobs/1788997'>Job Application for Software Engineer, Backend at Boxed</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxedwholesale/jobs/1788997'>Job Application for Software Engineer, Backend at Boxed</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -427,20 +439,6 @@
 <hr/>
 <h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1790506'>Job Application for Software Engineer II at Trunk Club</a></h5> 
-<p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/zscaler/job/oBKuafwJ'>Zscaler Careers - Sr. Java Software Engineer (Application Security)</a></h5> 
-<p><span class="badge badge-light">California</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/mobile-software-engineer-ios-android'>
-      Mobile Software Engineer (iOS &amp; Android) - DefinedCrowd
-    </a></h5> 
-<p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
